polishing for project

--- a/publications.html
+++ b/publications.html
@@ -205,10 +205,10 @@
 		<a href="http://redwood-data.org/indoor_lidar_rgbd/" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
-		<a href="publications/data/17_iccv.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/data/17_iccv.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
-		<a href="publications/data/17_iccv_supp.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/data/17_iccv_supp.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-paperclip"></span> Supplementary
 		</a>
 	</div>
@@ -230,7 +230,7 @@
 		<a href="https://www.tanksandtemples.org/" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
-		<a href="publications/data/17_siggraph.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/data/17_siggraph.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
 	</div>
@@ -277,7 +277,7 @@
 		<p>Jaesik Park, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon<br>
 		IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>), 2016<br>
 		</p>
-		<a href="publications/multiviewps/index.html" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/multiviewps/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
 	</div>
@@ -337,7 +337,7 @@
 		<p>Jaesik Park, Yu-Wing Tai, Sudipta N. Sinha, and In So Kweon<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2016<br>
 		</p>
-		<a href="publications/photoconsistency/index.html" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/photoconsistency/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
 	</div>
@@ -403,10 +403,10 @@
 		<p>Seong-Heum Kim, Yu-Wing Tai, Jaesik Park, and In So Kweon<br>
 		IEEE Transaction on Image Processing (<b>TIP</b>), 2016<br>
 		</p>
-		<a href="publications/data/16_tip.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/data/16_tip.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
-		<a href="publications/data/16_tip.txt" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/data/16_tip.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
 	</div>
@@ -434,10 +434,10 @@
 		<p>Hyowon Ha, Jaesik Park, and In So Kweon<br>
 		International Conference on 3D Vision (<b>3DV</b>), 2015<br>
 		</p>
-		<a href="publications/data/15_3dv.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/data/15_3dv.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
-		<a href="publications/data/15_3dv.txt" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/data/15_3dv.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
 	</div>
@@ -503,7 +503,7 @@
 		<p>Jaesik Park, Hyeongwoo Kim, Yu-Wing Tai, Michael S. Brown and In-So Kweon<br>
 		IEEE Transaction on Image Processing (<b>TIP</b>), 2014<br>
 		</p>
-		<a href="publications/depthups/index.html" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/depthups/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
 	</div>
@@ -522,10 +522,10 @@
 		<p>Byungtae Ahn, Jaesik Park, and In So Kweon<br>
 		Asian Conference on Computer Vision (<b>ACCV</b>), 2014<br>
 		</p>
-		<a href="publications/data/14_accv.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/data/14_accv.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
-		<a href="publications/data/14_accv.txt" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/data/14_accv.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
 	</div>
@@ -544,10 +544,10 @@
 		<p>Jinsoo Choi, Byungtae Ahn, Jaesik Park, In So Kweon<br>
 		International Conference on Image Processing (<b>ICIP</b>), 2014<br>
 		</p>
-		<a href="publications/data/14_icip.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/data/14_icip.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
-		<a href="publications/data/14_icip.txt" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/data/14_icip.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
 	</div>
@@ -585,7 +585,7 @@
 		<p>Jaesik Park, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai and In So Kweon<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2014<br>
 		</p>
-		<a href="publications/lightcalib/index.html" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/lightcalib/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
 	</div>
@@ -613,7 +613,7 @@
 		<p>Jaesik Park, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai and In So Kweon<br>
 		International Conference on Computer Vision (<b>ICCV</b>), 2013<br>
 		Received 19th HumanTech Paper Award (Silver Prize), Samsung Electronics Corp.</p>
-		<a href="publications/multiviewps/index.html" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/multiviewps/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
 	</div>
@@ -641,13 +641,13 @@
 		<p>Jaesik Park, Tae Hyun Oh, Jiyoung Jung, Yu-Wing Tai and In So Kweon<br>
 		European Conference on Computer Vision (<b>ECCV</b>), 2012<br>
 		</p>
-		<a href="publications/data/12_eccv.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/data/12_eccv.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
-		<a href="publications/data/12_eccv_poster.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/data/12_eccv_poster.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-paperclip"></span> Supplementary
 		</a>
-		<a href="publications/data/12_eccv.txt" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/data/12_eccv.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
 	</div>
@@ -666,13 +666,13 @@
 		<p>Jaesik Park, Joon-Young Lee, Yu-Wing Tai and In So Kweon<br>
 		International Conference on Image Processing (<b>ICIP</b>), 2012<br>
 		</p>
-		<a href="publications/data/12_icip.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/data/12_icip.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
-		<a href="publications/data/12_icip_poster.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/data/12_icip_poster.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-paperclip"></span> Supplementary
 		</a>
-		<a href="publications/data/12_icip.txt" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/data/12_icip.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
 	</div>
@@ -691,7 +691,7 @@
 		<p>Jaesik Park, Yu-Wing Tai and In-So Kweon<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2012<br>
 		</p>
-		<a href="publications/identigram/index.html" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/identigram/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
 	</div>
@@ -719,7 +719,7 @@
 		<p>Jiyoung Jung, Yekeun Jeong, Jaesik Park, Hyowon Ha, J. D. Kim and In-So Kweon<br>
 		IEEE/RSJ International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2011<br>
 		</p>
-		<a href="publications/data/11_iros.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/data/11_iros.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
 	</div>
@@ -738,7 +738,7 @@
 		<p>Jaesik Park*, Hyeongwoo Kim*, Yu-Wing Tai, Michael S. Brown and In-So Kweon<br>
 		International Conference on Computer Vision (<b>ICCV</b>), 2011<br>
 		*Equal contributions.</p>
-		<a href="publications/depthups/index.html" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/depthups/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
 	</div>
