--- a/publications/depthups/index.html
+++ b/publications/depthups/index.html
@@ -107,10 +107,10 @@
 		<p>Jaesik Park, Hyeongwoo Kim, Yu-Wing Tai, Michael S. Brown and In-So Kweon<br>
 		IEEE Transactions of Image Processing (TIP), 2014<br>
 		</p>
-		<a href="tip14_paper.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/depthups/tip14_paper.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
-		<a href="tip14_bibtex.txt" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/depthups/tip14_bibtex.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
 		<p><br></p>
@@ -118,22 +118,22 @@
 		<p>Jaesik Park, Hyeongwoo Kim*, Yu-Wing Tai, Michael S. Brown and In-So Kweon<br>
 		The 13th International Conference on Computer Vision (ICCV), 2011<br>
 		*The firrst and the second authors provided equal contributions to this work.</p>
-		<a href="iccv11_paper.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/depthups/iccv11_paper.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
-		<a href="iccv11_supp.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/depthups/iccv11_supp.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-paperclip"></span> Supplementary
 		</a>
-		<a href="iccv11_poster.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/depthups/iccv11_poster.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-blackboard"></span> Poster
 		</a>
-		<a href="iccv11_bibtex.txt" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/depthups/iccv11_bibtex.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
-		<a href="iccv11_executable.zip" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/depthups/iccv11_executable.zip" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-floppy-disk"></span> Executable
 		</a>
-		<a href="iccv11_dataset.zip" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/depthups/iccv11_dataset.zip" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-download-alt"></span> Data
 		</a>
 		<p><br></p>
