--- a/publications/lightcalib/index.html
+++ b/publications/lightcalib/index.html
@@ -96,16 +96,16 @@
 		<p>Jaesik Park, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon<br>
 		CVPR 2014<br>
 		(Dataset has raw images used in the experiment. Note that the size of this file is 2.15GB)</p>
-		<a href="paper.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/lightcalib/paper.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
-		<a href="supp.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/lightcalib/supp.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-paperclip"></span> Supplementary
 		</a>
-		<a href="poster.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/lightcalib/poster.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-blackboard"></span> Poster
 		</a>
-		<a href="bibtex.txt" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/lightcalib/bibtex.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
 		<a href="https://drive.google.com/open?id=0B2c9Pxb5OdhMUXQ1RWU1UU1kbWM&authuser=0" target="_blank" class="btn btn-default" role="button">
