--- a/publications/multiviewps/index.html
+++ b/publications/multiviewps/index.html
@@ -98,10 +98,10 @@
 		<p>Jaesik Park, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, In So Kweon<br>
 		IEEE Transactions of Pattern Analysis and Machine Intelligence (TPAMI), 2016<br>
 		</p>
-		<a href="PAMI2016.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/multiviewps/PAMI2016.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
-		<a href="PAMI2016bibtex.txt" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/multiviewps/PAMI2016bibtex.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
 		<p><br></p>
@@ -109,19 +109,19 @@
 		<p>Jaesik Park, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, In So Kweon<br>
 		The 14th International Conference on Computer Vision (ICCV), 2013<br>
 		</p>
-		<a href="ICCV2013.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/multiviewps/ICCV2013.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
-		<a href="ICCV2013poster.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/multiviewps/ICCV2013poster.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-blackboard"></span> Poster
 		</a>
-		<a href="ICCV2013bibtex.txt" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/multiviewps/ICCV2013bibtex.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
 		<a href="https://www.dropbox.com/s/pdhiexb4jur5tqf/MeshOpt_Executable.zip?dl=1" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-floppy-disk"></span> Executable
 		</a>
-		<a href="dataset.txt" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/multiviewps/dataset.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-download-alt"></span> Data
 		</a>
 		<p><br></p>
