--- a/publications/photoconsistency/index.html
+++ b/publications/photoconsistency/index.html
@@ -99,13 +99,13 @@
 		<p>Jaesik Park, Yu-Wing Tai, Sudipta N. Sinha, and In So Kweon<br>
 		CVPR 2016<br>
 		</p>
-		<a href="paper.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/photoconsistency/paper.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
-		<a href="supp.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/photoconsistency/supp.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-paperclip"></span> Supplementary
 		</a>
-		<a href="bibtex.txt" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/photoconsistency/bibtex.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
 		<a href="https://github.com/syncle/photo_consistency" target="_blank" class="btn btn-default" role="button">
