--- a/publications/identigram/index.html
+++ b/publications/identigram/index.html
@@ -104,19 +104,19 @@
 		<p>Jaesik Park, Yu-Wing Tai and In-So Kweon<br>
 		CVPR 2012<br>
 		</p>
-		<a href="paper.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/identigram/paper.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
-		<a href="supp.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/identigram/supp.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-paperclip"></span> Supplementary
 		</a>
-		<a href="poster.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/identigram/poster.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-blackboard"></span> Poster
 		</a>
-		<a href="bibtex.txt" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/identigram/bibtex.txt" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-list"></span> Bibtex
 		</a>
-		<a href="executable.zip" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/identigram/executable.zip" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-floppy-disk"></span> Executable
 		</a>
 		<p><br></p>
