fix broken links

--- a/publications.html
+++ b/publications.html
@@ -161,6 +161,9 @@
 		<p>Byungtae Ahn, Dong-Geol Choi, Jaesik Park, and In So Kweon<br>
 		Robotics and Autonomous Systems (<b>RAS</b>), 2018<br>
 		</p>
+		<a href="https://www.sciencedirect.com/science/article/pii/S0921889017303524" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
 	</div>
 </div>
 <div class="row" style="height: 30px">
@@ -177,6 +180,9 @@
 		<p>Hae-Gon Jeon, Jaesik Park, Gyeongmin Choe, Jinsun Park, Yunsu Bok, Yu-Wing Tai, and In So Kweon<br>
 		IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>), 2018<br>
 		</p>
+		<a href="http://ieeexplore.ieee.org/document/8263242/" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
 	</div>
 </div>
 <div class="row" style="height: 30px">
@@ -318,7 +324,7 @@
 		<p>Gyeongmin Choe, Jaesik Park, Yu-Wing Tai, and In So Kweon<br>
 		International Journal of Computer Vision (<b>IJCV</b>), 2016<br>
 		</p>
-		<a href="http://rcv.kaist.ac.kr/gmchoe/Project/Kinect_IR_IJCV/Published.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="https://drive.google.com/file/d/1LsgtzkOt-z8W6iX8tHHV8H_XTqTOg-_q/view" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
 	</div>
@@ -566,7 +572,7 @@
 		<p>Gyeongmin Choe*, Jaesik Park*, Yu-Wing Tai and In So Kweon<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2014<br>
 		*Equal contributions. Received 20th HumanTech Paper Award (Silver Prize), Samsung Electronics Corp.</p>
-		<a href="http://rcv.kaist.ac.kr/gmchoe/project/Kinect_IR/" target="_blank" class="btn btn-default" role="button">
+		<a href="https://sites.google.com/site/gmchoe1/kinir" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
 	</div>
