--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
 					<p class="lead">Hello! I am a research scientist of Intel intelligent systems lab located in beautiful California.</p>
 					<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 					<ul class="list-group">
+                        <li class="list-group-item">
+							2018.06. I am attending CVPR to present the accepted paper.</a>.
+						</li>
 						<li class="list-group-item">
 							2018.03. Our paper about new convolution framework for large-scale point cloud segmentation is accepted to CVPR 2018</a>.
 						</li>
