--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 					<ul class="list-group">
                         <li class="list-group-item">
-							2018.06. I am attending CVPR to present the accepted paper.</a>.
+							2018.06. I am attending CVPR 2018 to present the accepted paper.
 						</li>
 						<li class="list-group-item">
 							2018.03. Our paper about new convolution framework for large-scale point cloud segmentation is accepted to CVPR 2018</a>.
