some updates on academic activities

--- a/about_me.html
+++ b/about_me.html
@@ -89,12 +89,14 @@
 			<h2> <span class="glyphicon glyphicon-briefcase"></span>  Work Experience</h2>
 			<ul class="list-group">
 			<li class="list-group-item">
-				<h4>Staff Research Scientist - Intel Labs</h4>
+				<h4><a href="https://ai.intel.com/bio/jaesik-park/" target="_blank">Staff Research Scientist</a> - Intel Labs</h4>
+                Manager: <a href="http://vladlen.info" target="_blank"> Dr. Vladlen Koltun</a><br>
 				<span class="glyphicon glyphicon-map-marker"></span> Santa Clara, California, USA<br>
 				<span class="glyphicon glyphicon-calendar"></span> Dec. 2015 - <kbd>current</kbd>
 			</li>
 			<li class="list-group-item">
 				<h4>Post-Doc Researcher - KAIST</h4>
+                Manager: <a href="https://scholar.google.com/citations?user=XA8EOlEAAAAJ&hl=en" target="_blank"> Prof. In So Kweon</a><br>
 				<span class="glyphicon glyphicon-map-marker"></span> Daejeon, Republic of Korea<br>
 				<span class="glyphicon glyphicon-calendar"></span> Aug. 2015 - Nov. 2015
 			</li>
