--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			</div>
 			<div class="col-lg-9">
 					<h1>Jaesik Park</h1>
-					<p class="lead">Hello! I am a research scientist of Intel intelligent systems lab located in beautiful California.</p>
+					<p class="lead">Hello! I am a Research Scientist of Intel Intelligent Systems Lab located in beautiful California.</p>
 					<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 					<ul class="list-group">
                         <li class="list-group-item">
