some updates on news

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
 					<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 					<ul class="list-group">
                         <li class="list-group-item">
+							2018.12. Our team (Marcel Nassar, Zhuwen Li, and me) received Research Velocity Challenge 9 Award from Intel.
+						</li>
+                        <li class="list-group-item">
 							2018.06. I am attending CVPR 2018 to present the accepted paper.
 						</li>
 						<li class="list-group-item">
