some updates on news

--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
 					<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 					<ul class="list-group">
                         <li class="list-group-item">
-							2018.12. Our team (Marcel Nassar, Zhuwen Li, and me) received Research Velocity Challenge 9 Award from Intel.
+							2018.12. Our team (Marcel Nassar, Zhuwen Li, and me) received <b>Research Velocity Challenge 9 Award</b> from Intel.
 						</li>
                         <li class="list-group-item">
 							2018.06. I am attending CVPR 2018 to present the accepted paper.
 						</li>
 						<li class="list-group-item">
-							2018.03. Our paper about new convolution framework for large-scale point cloud segmentation is accepted to CVPR 2018</a>.
+							2018.03. Our paper about new convolution framework for large-scale point cloud segmentation is accepted to <b>CVPR 2018</b></a>.
 						</li>
 						<li class="list-group-item">
 							2018.01. We are releasing <b>Open3D</b>: a modern library for 3D data processing. Please visit <a href="http://www.open3d.org" target="_blank">www.open3d.org</a>.
 						</li>
 						<li class="list-group-item">
-							2017.12. A learning-based method for depth from light field is accepted to PAMI. Paper comming soon.
+							2017.12. A learning-based method for depth from light field is accepted to <b>TPAMI</b>. Paper comming soon.
 						</li>
 						<li class="list-group-item">
 							2017.08. Launching new homepage for better visualization on workstation and mobile.
@@ -105,7 +105,7 @@
 							2017.05. We are releasing <a href="http://www.tanksandtemples.org" target="_blank">www.tanksandtemples.org</a>: website for benchmarking photogrammetry methods.
 						</li>
 						<li class="list-group-item">
-							2017.05. Our paper about image based 3D reconstruction benchmark is accepted to SIGGRAPH 2017.
+							2017.05. Our paper about image based 3D reconstruction benchmark is accepted to <b>SIGGRAPH</b> 2017.
 						</li>
 					</ul>
 			</div>
