some updates on news

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
 					<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 					<ul class="list-group">
                         <li class="list-group-item">
+							2018.12. I will serve as the area chair for <b>ICCV</b> 2019 .
+						</li>
+                        <li class="list-group-item">
 							2018.12. Our team (Marcel Nassar, Zhuwen Li, and me) received <b>Research Velocity Challenge 9 Award</b> from Intel.
 						</li>
                         <li class="list-group-item">
@@ -97,15 +100,6 @@
 						</li>
 						<li class="list-group-item">
 							2017.12. A learning-based method for depth from light field is accepted to <b>TPAMI</b>. Paper comming soon.
-						</li>
-						<li class="list-group-item">
-							2017.08. Launching new homepage for better visualization on workstation and mobile.
-						</li>
-						<li class="list-group-item">
-							2017.05. We are releasing <a href="http://www.tanksandtemples.org" target="_blank">www.tanksandtemples.org</a>: website for benchmarking photogrammetry methods.
-						</li>
-						<li class="list-group-item">
-							2017.05. Our paper about image based 3D reconstruction benchmark is accepted to <b>SIGGRAPH</b> 2017.
 						</li>
 					</ul>
 			</div>
