--- a/academic_activities.html
+++ b/academic_activities.html
@@ -86,7 +86,7 @@
 <!-- Source -->
 <div class="container">
 	<div class="col-lg-6 text-left">
-            <h2> <span class="glyphicon glyphicon-globe"></span>  Program Commitee</h2>
+            <h2> <span class="glyphicon glyphicon-globe"></span>  Program Committee</h2>
             <ul class="list-group">
                 <li class="list-group-item">
                     Area Chair, International Conference on Computer Vision (ICCV), 2019<br>
