--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							2018.12. I will serve as the area chair for <b>ICCV</b> 2019 .
 						</li>
                         <li class="list-group-item">
-							2018.12. Our team (Marcel Nassar, Zhuwen Li, and me) received <b>Research Velocity Challenge 9 Award</b> from Intel.
+							2018.12. Our team (Marcel Nassar, Zhuwen Li, and myself) received <b>Research Velocity Challenge 9 Award</b> from Intel.
 						</li>
                         <li class="list-group-item">
 							2018.06. I am attending CVPR 2018 to present the accepted paper.
