--- a/academic_activities.html
+++ b/academic_activities.html
@@ -97,7 +97,7 @@
 				<li class="list-group-item">
 					<h3>International Conference</h3>
                     ACM SIGGRAPH 2017 - 2019<br>
-					ACM SIGGRAPH ASIA 2016, 2017<br>
+					ACM SIGGRAPH ASIA 2016 - 2018<br>
 					IEEE Computer Vision and Pattern Recognition (CVPR), 2014 - 2019<br>
 					International Conference on Computer Vision (ICCV), 2015, 2017<br>
 					The European Conference on Computer Vision (ECCV), 2012, 2016, 2018<br>
