adding news on Open3D

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
                         <li class="list-group-item">
 							2018.12. Our team (Marcel Nassar, Zhuwen Li, and myself) received <b>Research Velocity Challenge 9 Award</b> from Intel.
 						</li>
+						<li class="list-group-item">
+							2018.11. <b>Open3D</b> received <a href="http://github.com/IntelVCL/Open3D" target="_blank">1k Github stars</a>.
+						</li>
                         <li class="list-group-item">
 							2018.06. I am attending CVPR 2018 to present the accepted paper.
 						</li>
