recover previous news

--- a/index.html
+++ b/index.html
@@ -101,11 +101,46 @@
 						<li class="list-group-item">
 							2018.01. We are releasing <b>Open3D</b>: a modern library for 3D data processing. Please visit <a href="http://www.open3d.org" target="_blank">www.open3d.org</a>.
 						</li>
-						<li class="list-group-item">
-							2017.12. A learning-based method for depth from light field is accepted to <b>TPAMI</b>. Paper comming soon.
-						</li>
+						<div id="accordion">
+							<div class="card">
+								<div class="card-header" id="heading-previous-news">
+									<h5 class="mb-0">
+										<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapse-previous-news" aria-expanded="false"
+										 aria-controls="collapse-previous-news">
+											Previous news &#9661;
+										</button>
+									</h5>
+								</div>
+								<div id="collapse-previous-news" class="collapse" aria-labelledby="heading-previous-news" data-parent="#accordion">
+									<li class="list-group-item">
+										2018.01. A multi-task network for joint head detection and pose estimation is accepted to RAS.
+									</li>
+									<li class="list-group-item">
+										2017.12. A learning-based method for depth from light field is accepted to <b>TPAMI</b>. Paper comming soon.
+									</li>
+									<li class="list-group-item">
+										2017.08. Launching <a href="http://www.jaesik.info" target="_blank">jaesik.info</a> for better visualization on workstation or mobile platforms.
+									</li>
+									<li class="list-group-item">
+										2017.05. We are releasing <a href="http://www.tanksandtemples.org" target="_blank">www.tanksandtemples.org</a>: website for benchmarking photogrammetry methods.
+									</li>
+									<li class="list-group-item">
+										2017.05. Our paper about image based 3D reconstruction benchmark is accepted to <b>SIGGRAPH</b> 2017.
+									</li>
+									<li class="list-group-item">
+										2017.02. An algorithm about learning based automatic 3D view selection is accepted to Computer Graphics Forum.
+									</li>
+									<li class="list-group-item">
+										2016.08. A paper about high-quality 3D reconstruction is accepted to <b>TPAMI</b>.
+									</li>
+									<li class="list-group-item">
+										2016.07. A paper about global point-cloud registration is accepted to <b>ECCV</b> 2016 as an <b>oral</b> presentation.
+									</li>
+								</div>
+							</div>
+						</div>
 					</ul>
-			</div>
+				</div>
 			</div>
 		</div>
 	</div>
