--- a/academic_activities.html
+++ b/academic_activities.html
@@ -132,8 +132,8 @@
 			<h2> <span class="glyphicon glyphicon-tower"></span>  Awards</h2>
 			<ul class="list-group">
             <li class="list-group-item">
-				<h4>Research Velocity Challenge 9 Award</h4>
-				(Competitions for research proposal + 9 weeks of demonstration) Intel Labs, Dec. 2019.
+				<h4>Research Velocity Challenge Award</h4>
+				(A competition on research proposal and demonstration) Intel Labs, Dec. 2018.
 			</li>
 			<li class="list-group-item">
 				<h4>Depth estimation challenge: robustness champion</h4>
@@ -149,15 +149,23 @@
 			</li>
 			<li class="list-group-item">
 				<h4>Honor Prize</h4>
-				Annual Ph.D. Research Progress Evaluation, KAIST, May 2014 and May 2015.
+				Annual Ph.D. Research Progress Evaluation, KAIST, May 2015.
 			</li>
 			<li class="list-group-item">
 				<h4>CVPR 2015 Doctoral Consortium</h4>
 				IEEE CVPR, April 2015.
 			</li>
 			<li class="list-group-item">
+				<h4>Honor Prize</h4>
+				Annual Ph.D. Research Progress Evaluation, KAIST, May 2014.
+			</li>
+			<li class="list-group-item">
 				<h4>HumanTech Paper Award (Silver Prize)</h4>
-				Samsung Electronics Corp., Feb. 2013 and Feb. 2014.
+				Samsung Electronics Corp., Feb. 2014.
+			</li>
+			<li class="list-group-item">
+				<h4>HumanTech Paper Award (Silver Prize)</h4>
+				Samsung Electronics Corp., Feb. 2013.
 			</li>
 			<li class="list-group-item">
 				<h4>Best Paper Award</h4>
