--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 						2018.12. I will serve as the area chair for <b>ICCV</b> 2019 .
 					</li>
 					<li class="list-group-item">
-						2018.12. Our team (Marcel Nassar, Zhuwen Li, and myself) received <b>Research Velocity Challenge 9 Award</b> from Intel.
+						2018.12. Our team (Marcel Nassar, Zhuwen Li, and myself) received <b>Research Velocity Challenge Award</b> from Intel.
 					</li>
 					<li class="list-group-item">
 						2018.11. <b>Open3D</b> received <a href="http://github.com/IntelVCL/Open3D" target="_blank">1k Github stars</a>.
