--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
-						2018.12. I will serve as the area chair for <b>ICCV</b> 2019 .
+						2018.12. I will serve as an <a href="http://iccv2019.thecvf.com/area_chairs" target="_blank">area chair</a> for <b>ICCV</b> 2019 .
 					</li>
 					<li class="list-group-item">
 						2018.12. Our team (Marcel Nassar, Zhuwen Li, and myself) received <b>Research Velocity Challenge Award</b> from Intel.
